@@ -1,3 +1,8 @@
+2002-12-13  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations-progress.c:
+	Make sure text is valid utf8. (#98886)
+
 2002-12-12  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-container.c: 
